# Latent

./: LICENSE.md  README.md
arduino_loopback/: arduino_loopback.ino
doc/: Building.md  Running.md
test_arduino_latency/: .test_arduino_latency.cpp.swp  CMakeLists.txt  Superbuild.cmake  test_arduino_latency.cpp
vr_latency_tester/: ArduinoComparer.cpp  ArduinoComparer.h  CMakeLists.txt  DeviceThread.cpp  DeviceThread.h  DeviceThreadVRPNAnalog.cpp  DeviceThreadVRPNAnalog.h  DeviceThreadVRPNTracker.cpp  DeviceThreadVRPNTracker.h  OscillationEstimator.cpp  OscillationEstimator.h  RenderManager_latency_test.cpp  Superbuild.cmake  arduino_inputs_latency_test.cpp  head_shake_latency_test.cpp  vrpn_analog_latency_test.cpp  vrpn_device_latency_test.cpp
vr_latency_tester/cmake/: FindOSVRRenderManager.cmake  FindVRPN.cmake
vr_latency_tester/vrpn_streaming_arduino_filtered/: vrpn_streaming_arduino_filtered.ino
